[gd_scene load_steps=19 format=2]

[ext_resource path="res://Resources/Particles/orb1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Turret 512x512/Untitled-1_0000s_0002_TURRET.png" type="Texture" id=2]
[ext_resource path="res://Boss/BossTurret.gd" type="Script" id=3]
[ext_resource path="res://Weapons/HunterGun.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/HitBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Boss/Shield.tscn" type="PackedScene" id=6]
[ext_resource path="res://Boss/DummyTarget.tscn" type="PackedScene" id=7]
[ext_resource path="res://Boss/DamageFlash.tscn" type="PackedScene" id=8]
[ext_resource path="res://Boss/JunkGenerator.tscn" type="PackedScene" id=9]
[ext_resource path="res://Resources/Particles/smoke3.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 168.0

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Gradient" id=12]
offsets = PoolRealArray( 0.234375, 1 )
colors = PoolColorArray( 0.580392, 0.580392, 0.580392, 0.517647, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=13]
gradient = SubResource( 12 )

[sub_resource type="Curve" id=14]
_data = [ Vector2( 0, 0.554545 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 1
emission_sphere_radius = 10.01
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, -50, 0 )
initial_velocity = 422.14
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 0.4
scale_curve = SubResource( 15 )
color_ramp = SubResource( 13 )

[node name="BossTurret" type="Node2D"]
script = ExtResource( 3 )
health = 30

[node name="JunkGenerator" parent="." instance=ExtResource( 9 )]

[node name="HitBox" parent="." instance=ExtResource( 5 )]
position = Vector2( -8, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="Untitled-10000s0002Turret" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Orb1" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( -8, 16 )
scale = Vector2( 0.62, 0.636 )
texture = ExtResource( 1 )

[node name="Center" type="Node2D" parent="Orb1"]

[node name="Orb2" type="Sprite" parent="Orb1/Center"]
modulate = Color( 0.823529, 0.0235294, 0.0235294, 1 )
position = Vector2( 77.4194, 0 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="Guns" type="Node2D" parent="."]

[node name="HunterGun" parent="Guns" instance=ExtResource( 4 )]
position = Vector2( 168, 176 )
rotation = 0.653512
cooldown = 1.2

[node name="HunterGun3" parent="Guns" instance=ExtResource( 4 )]
position = Vector2( -184, 168 )
rotation = 2.42903
cooldown = 1.2

[node name="PhaseTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Shield" parent="." instance=ExtResource( 6 )]
visible = false

[node name="DamageFlash" parent="." instance=ExtResource( 8 )]

[node name="DummyTarget" parent="." instance=ExtResource( 7 )]

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -48 )
emitting = false
amount = 20
lifetime = 1.5
process_material = SubResource( 16 )
texture = ExtResource( 10 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="timeout" from="PhaseTimer" to="." method="_on_PhaseTimer_timeout"]
[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
